--- a/recipes/lasanga.html
+++ b/recipes/lasanga.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> Stuffed Red Peppers  </h1>
+    <h1> Lasanga  </h1>
 
 <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F6306506.jpg&w=272&h=272&c=sc&poi=face&q=85">
 
