refactor Descripitn tag

--- a/recipes/ChoppedBrussels.html
+++ b/recipes/ChoppedBrussels.html
@@ -20,19 +20,15 @@
     <li> ¼ cup cider vinegar </li>
     <li> 2 tablespoons Dijon mustard </li>
 </ul>
+<h3>Steps</h3>
 <ol>
-    <li>Step1
-
-<p>some step 1 </p>
-
+    <li>
+        Whisk shallot, vinegar, oil, Dijon mustard, honey, salt, and pepper together in a small bowl.
     </li>
-    <li>Step 2
-
-<p> some step 2</p>
-
+    <li>
+        Place Brussels sprouts, apples, cranberries, almonds, sunflower seeds, and pumpkin seeds in a bowl; pour vinegar mixture over and toss to combine.
     </li>
 </ol>
-
 
 </body>
 </html>
