--- a/recipes/lasanga.html
+++ b/recipes/lasanga.html
@@ -11,7 +11,7 @@
 
 <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F6306506.jpg&w=272&h=272&c=sc&poi=face&q=85">
 
-<h2>Description</h2>
+<h3>Description</h3>
 <p>
     Bring brown rice and water to a boil in a saucepan. Reduce heat to medium-low, place a cover on the saucepan, and simmer until the rice is tender, about 40 minutes; transfer to a large mixing bowl.
 
@@ -23,16 +23,14 @@
     <li> ¼ cup cider vinegar </li>
     <li> 2 tablespoons Dijon mustard </li>
 </ul>
+
+<h3>Steps</h3>
 <ol>
-    <li>Step1
-
-<p>some step 1 </p>
-
+    <li>
+        Bring brown rice and water to a boil in a saucepan. Reduce heat to medium-low, place a cover on the saucepan, and simmer until the rice is tender, about 40 minutes; transfer to a large mixing bowl.
     </li>
-    <li>Step 2
-
-<p> some step 2</p>
-
+    <li>
+        Preheat oven to 350 degrees F (175 degrees C).
     </li>
 </ol>
 
