--- a/recipes/palakPaneer.html
+++ b/recipes/palakPaneer.html
@@ -21,16 +21,13 @@
     <li> ¼ cup cider vinegar </li>
     <li> 2 tablespoons Dijon mustard </li>
 </ul>
+<h3>Steps</h3>
 <ol>
-    <li>Step1
-
-<p>some step 1 </p>
-
+    <li>
+        Heat oil in a large skillet over medium heat. Place the potatoes in the skillet, cover and simmer, turning occasionally, until potatoes are almost tender and a little browned, about 10 minutes.
     </li>
-    <li>Step 2
-
-<p> some step 2</p>
-
+    <li>
+        Stir in the sausage, onion and peppers. Cover and cook for about 5 more minutes, or until onion and peppers are to desired tenderness.
     </li>
 </ol>
 </body>
