--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <ul>
 <li>
-    <a href="/recipes/lasanga.html">Stuffed Red Peppers </a>
+    <a href="./recipes/lasanga.html">Stuffed Red Peppers </a>
 </li>
 <li>
     <a href="/recipes/palakPaneer.html">Palak Paneer</a>
