--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <a href="./recipes/lasanga.html">Stuffed Red Peppers </a>
 </li>
 <li>
-    <a href="/recipes/palakPaneer.html">Palak Paneer</a>
+    <a href="./recipes/palakPaneer.html">Palak Paneer</a>
 </li>
 <li>
-    <a href="/recipes/ChoppedBrussels.html">Chopped Brussels</a>
+    <a href="./recipes/ChoppedBrussels.html">Chopped Brussels</a>
 </li>
 <li>
-    <a href="/recipes/ButternutSquash.html">Butternut Squash</a>
+    <a href="./recipes/ButternutSquash.html">Butternut Squash</a>
 </li>
     </ul>
     
